# DBNet.tensorRT

./: README.md  multi_gpu_train.sh  predict.sh  requirement.txt  singlel_gpu_train.sh
config/: bill2020.yaml  bill2020_MobileNetV3_FPN_DBhead_polyLR.yaml  bill2020_resnet18_FPN_DBhead_polyLR.yaml
data_loader/: dataset.py
deploy/: common.py  infer_on_trt.py  infer_on_trt_dynamic.py  readme.md
deploy/DBNet_C++_sample/: CMakeLists.txt  db_detector.cpp  db_detector.h  main.cpp
deploy/DBNet_C++_sample/utils/: CMakeLists.txt  Logger.cpp  Logger.h  common.h  filesystem.cpp  filesystem.h  lanms.h  python_like_func.h  timing.cpp  timing.h  waybillNbCheck.h
deploy/DBNet_C++_sample/utils/simpleini/: CMakeLists.txt  Makefile  snippets.cpp
models/: model.py
models/backbone/: MobilenetV3.py
models/neck/: FPEM_FFM.py  FPN.py
post_processing/: seg_detector_representer.py
tools/: predict.py
utils/: util.py
